# minifunctions

./: .gitignore  Cargo.toml  flake.nix  rust-toolchain.toml
database/: init.sh  init.sql
src/: errors.rs  main.rs  routes.rs
src/functions/: mod.rs  routes.rs
src/js/: hello.js
src/tenants/: mod.rs  repository.rs  routes.rs  tenant.rs
