[package]
name = "minifunctions"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.3", features = ["macros"] }
chrono = { version = "0.4.40", features = ["serde"] }
deno_core = "0.343.0"
serde = "1.0.219"
sqlx = {version = "0.8.5", features = [ "runtime-tokio", "tls-rustls-ring", "postgres", "time", "uuid" ]}
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
uuid = { version = "1.16.0", features = ["serde", "v7"] }
